# rsch

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: rust.yml
src/: main.rs
tests/: cli.rs
