[package]
name = "rsch"
version = "0.1.0"
edition = "2021"
authors = ["Mikhail Savin <jtprogru@gmail.com>"]
license = "WTFPL"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rand = "0.9.0"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
pretty_assertions = "1"

[profile.release]
strip = true
lto = "thin"
